fix(checkout): remove remaining 'extraction' text

--- a/checkout.html
+++ b/checkout.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/checkout.css">
   <script defer src="js/scripts.js"></script>
   <script defer src="js/cart.js"></script>
-  <meta name="description" content="Complete your extraction and fuel your next mission." />
+  <meta name="description" content="Complete your purchase and fuel your next mission." />
 </head>
 <body class="page-checkout">
   <header class="site-header">
