style(checkout): use Space Grotesk for section headers

--- a/checkout.html
+++ b/checkout.html
@@ -82,7 +82,7 @@
       </section>
 
       <aside class="panel fuel-load" aria-labelledby="summaryTitle">
-        <h2 id="summaryTitle" style="font-family:Anton,impact;color:var(--accent);">YOUR FUEL LOAD</h2>
+        <h2 id="summaryTitle" style="font-family:'Space Grotesk', sans-serif;color:var(--accent);">YOUR FUEL LOAD</h2>
         <div id="itemsList" aria-live="polite"></div>
         <div class="fuel-item totals"><strong>Total</strong><strong id="summaryTotal">$0.00</strong></div>
         <div style="margin-top:1rem">
@@ -92,7 +92,7 @@
     </div>
 
     <section class="panel refining-energy" id="paymentSection" style="margin-top:1rem" aria-labelledby="paymentTitle">
-      <h2 id="paymentTitle" style="font-family:Anton,impact;color:var(--accent);">REFINING YOUR ENERGY</h2>
+      <h2 id="paymentTitle" style="font-family:'Space Grotesk', sans-serif;color:var(--accent);">REFINING YOUR ENERGY</h2>
       <form id="paymentForm" novalidate>
         <div style="display:grid;grid-template-columns:1fr 1fr;gap:.6rem;">
           <div class="field"><label for="cardNumber">Card Number</label><input id="cardNumber" name="cardNumber" type="text" inputmode="numeric" placeholder="•••• •••• •••• ••••" autocomplete="cc-number" required aria-describedby="cardError"></div>
